--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,19 @@
 	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/globals/css/styles.css" type="text/css" media="all">
 
+	{% assign google_analytics_ua = site.google_analytics_ua | strip %}
+	{% if google_analytics_ua != empty %}
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', '{{ google_analytics_ua }}', 'auto');
+			ga('send', 'pageview');
+		</script>
+	{% endif %}
+
 	<!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<script type="text/javascript" src="/js/html5.js"></script>
