--- a/_layouts/news-single.html
+++ b/_layouts/news-single.html
@@ -2,6 +2,9 @@
 layout: news-single
 ---
 
+{% capture html_content %}
+<!-- START HTML -->
+
 {% include head.html %}
 
 	{% include components/page-header.html %}
@@ -40,3 +43,6 @@ layout: news-single
 	{% include sections/events-and-news.html %}
 
 {% include footer.html %}
+
+<!-- END HTML -->
+{% endcapture %}{{ html_content | minify }}
