--- a/_layouts/news-archive.html
+++ b/_layouts/news-archive.html
@@ -2,6 +2,9 @@
 layout: news-archive
 ---
 
+{% capture html_content %}
+<!-- START HTML -->
+
 {% include head.html %}
 
 	{% include components/page-header.html %}
@@ -25,3 +28,6 @@ layout: news-archive
 	</section>
 
 {% include footer.html %}
+
+<!-- END HTML -->
+{% endcapture %}{{ html_content | minify }}
