--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -44,13 +44,19 @@
 											<div class="textBox__text">{{ text | markdownify }}</div>
 
 											{% if section.is_button_active %}
-
+												{% capture button_url %}
+													{% if jekyll.environment == 'production' %}
+														{% value section.button_url %}
+													{% else %}
+														{% value section.button_uat_url %}
+													{% endif %}
+												{% endcapture %}
 												<div class="textBox__button">
-													<a href="{% path section.button_url %}" class="button">
+													<a href="{{button_url}}" class="button">
 														<span class="button__text">{% value section.button %}</span>
 													</a>
 												</div>
-											
+
 											{% endif %}
 										</div>
 									</div>
