--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -137,8 +137,8 @@
 		</div>
 	</footer>
 
-
-	<!-- Zendesk -->
+	{% assign zendesk_subdomain = site.zendesk_subdomain | strip %}
+	{% if zendesk_subdomain != empty %}
 
 		<script type="text/javascript">
 			window.zESettings = {
@@ -152,27 +152,33 @@
 			};
 		</script>
 		<script>
-			/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","910ths.zendesk.com");
+			/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","{{ zendesk_subdomain }}.zendesk.com");
 			/*]]>*/
 		</script>
 		<script>
 			zE(function() {
-				zE.setLocale('{{site.lang}}');
+				zE.setLocale('{{ site.lang }}');
 			});
 		</script>
 
-	<!-- Hotjar Tracking Code for 910ths.sa -->
+	{% endif %}
+
+	{% assign hotjar_id              = site.hotjar_id | strip %}
+	{% assign hotjar_snippet_version = site.hotjar_snippet_version | strip %}
+	{% if hotjar_id != empty and hotjar_snippet_version != empty %}
 
 		<script>
 			(function(h,o,t,j,a,r){
 				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-				h._hjSettings={hjid:511570,hjsv:5};
+				h._hjSettings={hjid:{{ hotjar_id }},hjsv:{{ hotjar_snippet_version }}};
 				a=o.getElementsByTagName('head')[0];
 				r=o.createElement('script');r.async=1;
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 		</script>
+
+	{% endif %}
 
 	<script type="text/javascript" src="/js/main.js"></script>
 	<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
