--- a/_includes/components/news-item.html
+++ b/_includes/components/news-item.html
@@ -5,7 +5,7 @@
 <div class="news__item">
 	<a href="{% t lang_slug %}{{ news.url }}" class="news__link">
 		<div class="news__imgBox">
-			<div class="news__img" style="background-image: url({{ news.images[0] }});"></div>
+			<div class="news__img" style="background-image: url({{ news.images[0] | imgix_url: w: 150, h: 250 }});"></div>
 		</div>
 		<div class="news__inner">
 			<span class="news__date">
