--- a/_includes/sections/video-banner.html
+++ b/_includes/sections/video-banner.html
@@ -29,9 +29,9 @@
 
 					<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z0">
 						<div class="videoBanner__videoBox">
-							<div class="videoBanner__videoImg videoBanner__videoImg--bg" style="background-image: url({{ section.background_asset | imgix_url: w: 1200, h: 800 }});"></div>
+							<div class="videoBanner__videoImg videoBanner__videoImg--bg" style="background-image: url({{ section.background_asset | imgix_url: auto: format, w: 1200, h: 800 }});"></div>
 							<a href="#" class="videoBanner__videoFrame jsMultiHover jsPopup" data-popup="videoPopup">
-								<div class="videoBanner__videoImg" style="background-image: url({{ section.video_image | imgix_url: w: 1200, h: 800 }});">
+								<div class="videoBanner__videoImg" style="background-image: url({{ section.video_image | imgix_url: auto: format, w: 1200, h: 800 }});">
 									<span class="videoBanner__play"></span>
 								</div>
 							</a>
