--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -181,6 +181,9 @@
 
 	{% endif %}
 
+	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
+	<link rel="stylesheet" href="/globals/css/styles.css" type="text/css" media="all">
+
 	<script type="text/javascript" src="/js/main.js"></script>
 	<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="/globals/js/scripts.js"></script>
