--- a/_includes/sections/video-banner.html
+++ b/_includes/sections/video-banner.html
@@ -51,7 +51,9 @@
 							<div class="popup__inner">
 								<div class="videoBanner__popup">
 									<div class="videoBanner__videoBox">
-										<div class="videoBanner__video" data-src="{% value section.youtube_video %}"></div>
+										<video class="videoBanner__video" preload="none">
+											<source src="{% value section.video_asset %}" type="video/mp4">
+										</video>
 									</div>
 								</div>
 							</div>
