--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -3,6 +3,7 @@ $c-darkest: #000;
 $c-dark: #111;
 $c-main: #8dc63f;
 $c-mainDark: #62ab01;
+$c-mainLight: #9AD945;
 $c-gray: #939393;
 $c-grayDark: #7b7b7b;
 $c-border: #bbbebf;
