--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -137,29 +137,23 @@
 		</div>
 	</footer>
 
-
 	{% assign zendesk_subdomain = site.zendesk_subdomain | strip %}
 	{% if zendesk_subdomain != empty %}
 
-		<script type="text/javascript">
-			window.zESettings = {
-				webWidget: {
-					launcher: {
-						chatLabel: {
-							'ar': 'المحادثة'
-						}
-					}
-				}
-			};
-		</script>
+		<div class="zendeskButton">
+			<span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+					<path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path>
+					<circle cx="10" cy="15" r="1"></circle>
+					<path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path>
+				</svg>
+			</span>
+			<span class="zendeskButton__label" data-waiting="{% t zendesk.waiting %}">{% t zendesk.label %}</span>
+		</div>
+
 		<script>
-			/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","{{ zendesk_subdomain }}.zendesk.com");
-			/*]]>*/
-		</script>
-		<script>
-			zE(function() {
-				zE.setLocale('{{ site.lang }}');
-			});
+			document.zendeskHost = '{{ zendesk_subdomain }}.zendesk.com';
+			document.zendeskLang = '{{ site.lang }}';
 		</script>
 
 	{% endif %}
