Change css file imported from CDN to components.min.css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
 
 	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/globals/css/styles.css" type="text/css" media="all">
-	<link rel="stylesheet" href="https://cdn.910ths.sa/css/style.min.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://cdn.910ths.sa/css/components.min.css" type="text/css" media="all" />
 
 	<style type="text/css">
 		@media (max-width: 768px) {
